# agnocast

.github/workflows/: cppcheck-differential.yaml
agnocast_kmod/: Makefile  agnocast.h  agnocast_exit.c  agnocast_init.c  agnocast_internal.c  agnocast_internal.h  agnocast_ioctl.c  agnocast_kunit_main.c  agnocast_main.c  agnocast_memory_allocator.c  agnocast_procfs.c
agnocast_kmod/agnocast_kunit/: Makefile.inc  agnocast_kunit_add_subscriber.c  agnocast_kunit_do_exit.c  agnocast_kunit_get_node_subscriber_topics.c  agnocast_kunit_get_publisher_num.c  agnocast_kunit_get_subscriber_num.c  agnocast_kunit_get_subscriber_qos.c  agnocast_kunit_get_topic_publisher_info.c  agnocast_kunit_get_topic_subscriber_info.c  agnocast_kunit_procfs.c  agnocast_kunit_procfs.h  agnocast_kunit_publish_msg.c  agnocast_kunit_publish_msg.h  agnocast_kunit_receive_msg.c  agnocast_kunit_release_sub_ref.c  agnocast_kunit_remove_publisher.c  agnocast_kunit_remove_subscriber.c  agnocast_kunit_set_ros2_subscriber_num.c  agnocast_kunit_take_msg.c
docs/: agnocast_node_interface_comparison.md
scripts/test/: e2e_test_cross_ns_cli.bash  e2e_test_cross_ns_observability.bash  e2e_test_daemon_bridge_mq.bash  e2e_test_discovery_agent.bash
src/agnocast_cie_thread_configurator/: CMakeLists.txt
src/agnocast_cie_thread_configurator/include/agnocast_cie_thread_configurator/: thread_config.hpp  thread_configurator_node.hpp
src/agnocast_cie_thread_configurator/src/: thread_config.cpp  thread_configurator_node.cpp
src/agnocast_cie_thread_configurator/test/: test_reapply_config.cpp
src/agnocast_ioctl_wrapper/: CMakeLists.txt
src/agnocast_ioctl_wrapper/src/: node_info.cpp  procfs_reader.cpp
src/agnocast_sample_application/: package.xml
src/agnocast_sample_application/launch/: listener.launch.xml  talker.launch.xml
src/agnocastlib/: CMakeLists.txt  package.xml
src/agnocastlib/include/agnocast/: agnocast.hpp  agnocast_callback_info.hpp  agnocast_client.hpp  agnocast_epoll.hpp  agnocast_ioctl.hpp  agnocast_mq.hpp  agnocast_publisher.hpp  agnocast_service.hpp  agnocast_subscription.hpp  agnocast_timer.hpp  agnocast_timer_info.hpp  agnocast_utils.hpp
src/agnocastlib/src/: agnocast_epoll.cpp  agnocast_publisher.cpp  agnocast_subscription.cpp  agnocast_timer.cpp  agnocast_timer_info.cpp  agnocast_utils.cpp
src/agnocastlib/src/internal/: type_registry_writer.cpp
src/agnocastlib/src/node/: agnocast_context.cpp  agnocast_node.cpp
src/agnocastlib/test/integration/: test_agnocast_node.cpp
src/agnocastlib/test/unit/: test_agnocast_context.cpp  test_agnocast_timer.cpp  test_agnocast_timer_api.cpp  test_bridge_factory_registry.cpp  test_node_base.cpp  test_type_registry_writer.cpp
src/ros2agnocast/: package.xml  setup.py
src/ros2agnocast/ros2agnocast/: discovery.py
src/ros2agnocast/ros2agnocast/templates/: CMakeLists.txt.em
src/ros2agnocast/ros2agnocast/verb/: discovery_daemon_status.py  list_agnocast.py  node_info_agnocast.py  node_list_agnocast.py  topic_info_agnocast.py
src/ros2agnocast/test/: test_cross_domain.py  test_discovery.py  test_discovery_daemon_status.py
src/ros2agnocast_discovery_agent/: package.xml  setup.py
src/ros2agnocast_discovery_agent/launch/: discovery_agent.launch.xml
src/ros2agnocast_discovery_agent/ros2agnocast_discovery_agent/: agent.py  bridge_decider.py  type_registry.py
src/ros2agnocast_discovery_agent/scripts/: discovery_agent
src/ros2agnocast_discovery_agent/systemd/: agnocast-discovery-agent.service
src/ros2agnocast_discovery_agent/test/: test_agent.py  test_bridge_decider.py  test_type_registry.py
src/ros2agnocast_discovery_msgs/: CMakeLists.txt  package.xml
src/ros2agnocast_discovery_msgs/msg/: AgnocastDaemonState.msg  AgnocastEndpoint.msg  AgnocastTopic.msg
(+12 files in other folders)
