<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2agnocast_discovery_agent</name>
  <version>2.3.3</version>
  <description>
    Per-ECU daemon that reads /proc/agnocast/ and publishes per-NS Agnocast
    state to /_agnocast_discovery so ros2agnocast CLI can aggregate across
    IPC namespaces and ECUs.
  </description>

  <maintainer email="keita.morisaki@tier4.jp">Keita Morisaki</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2agnocast_discovery_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
